added journal club

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,5 +5,5 @@ main:
   #  url: /posts/
   - title: "Publications"
     url: /research/
-    #- title: "Tags"
-    #url: /tags/
+  - title: "Journal club"
+    url: /journalclub/
