--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ plugins:
 author:
   name   : "Alison Ming"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "Leverhulme Trust Early Career Fellow <br/>
+  bio    : "NERC Independent Research Fellow <br/>
             Fellow in Mathematics at Churchill College<br/>
             Stratospheric Dynamicist<br/>"
   links:
